sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: '(' expected but identifier found.
			if !plusPetit(i,i+1) {
                           ^AlgBubbleSort1:14: error: illegal start of simple expression
		} if (nb = 0) {
                ^AlgBubbleSort1:14: error: ';' expected but 'if' found.
		} if (nb = 0) {
                  ^AlgBubbleSort1:18: error: 'while' expected but '}' found.
}
^